# lib-midi-akai-apc-mini

./: .clangd  CMakeLists.txt  LICENSE  Makefile  README.md
include/: apc_mini_controller.hpp
src/: apc_mini_controller.cpp  light_pattern_controller.cpp  light_pattern_controller.hpp  main.cpp
